--- a/styles/style.css
+++ b/styles/style.css
@@ -6,16 +6,30 @@ body {
 
 header {
     background-color: #333;
-    padding: 10px 0;
+    padding: 10px 20px;
     color: white;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    padding:10px 20px;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Ensures the logo is on the left and nav items on the right */
+}
+
+nav .logo {
+    width: 150px;
 }
 
 nav ul {
     list-style-type: none;
     padding: 0;
     display: flex;
-    justify-content: flex-end;
-    margin-right: 20px;
+    margin: 0;
 }
 
 nav ul li {
@@ -25,21 +39,16 @@ nav ul li {
 nav ul li a {
     color: white;
     text-decoration: none;
+    padding: 10px 15px;
 }
 
 nav ul li a:hover {
     background-color: #555;
-    padding: 5px 10px;
     border-radius: 5px;
 }
 
-.logo {
-    width: 150px;
-    margin-left: 20px;
-}
-
 main {
-    padding: 20px;
+    padding: 100px 20px 20px; /* Adjusted padding to account for the fixed header */
 }
 
 .product-gallery {
