--- a/styles/style.css
+++ b/styles/style.css
@@ -80,8 +80,20 @@ button {
     padding: 10px 15px;
     cursor: pointer;
     border-radius: 5px;
+    transition: transparent;
+    transition-delay: 2ms;
 }
 
 button:hover {
     background-color: #218838;
+}
+
+.lg-table
+{
+    padding:10px 10px;
+    align-self:center;
+    align-items: center;
+    background: cyan;
+    color:rgb(226, 43, 52);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
